--- a/F.tex
+++ b/F.tex
@@ -147,7 +147,7 @@ Eventually we aim to conduct model-based clinical trials with automated approach
 
 %\subsection{Acknowledgements}
 \begin{acknowledgements}
-The authors would like to thank Houssam Abbas, Rajeev Alur, George M. Chen, Allison Connolly, Insup Lee, Pieter Mosterman, Miroslav Pajic and Oleg Sokolsky  for fruitful discussions during the preparation of this manuscript. This research was supported in part by NSF CNS-0720518, NSF CNS-1035715, NSF MRI-0923518, NSF and NSF CAREER-1253842 grants. This work was also supported by STARnet - a Semiconductor Research Corporation program sponsored by MARCO and DARPA.
+The authors would like to thank Houssam Abbas, Rajeev Alur, George M. Chen, Allison Connolly, Insup Lee, Pieter Mosterman, Miroslav Pajic and Oleg Sokolsky  for fruitful discussions during the preparation of this manuscript. This research was supported in part by NSF CNS-0720518, NSF CNS-1035715, NSF MRI-0923518, NSF CPS Frontier 1446664 and NSF CAREER-1253842 grants. This work was also supported by STARnet - a Semiconductor Research Corporation program sponsored by MARCO and DARPA.
 \end{acknowledgements}
 %%\chapter{Certification}
 %%\begin{itemize}
