--- a/bibliography.bib
+++ b/bibliography.bib
@@ -200,17 +200,24 @@ year={2015}
 	Title = {{Formal Specification of a Cardiac Pacing System}},
 	Year = {2009}}
 
-@misc{fda1,
-	Title = {{US FDA, General Principles of Software Validation; Final Guidance for Industry and FDA Staff}},
+@article{fda1,
+	Author = {US FDA},
+	Journal = {Center for Devices and Radiological Health},
+	Title = {{Design Control Guidance For Medical Device Manufacturers}},
+	Year = {1997}}
+	
+@article{fda2,
+	Author = {US FDA},
+	Journal = {Center for Devices and Radiological Health},
+	Title = {{General Principles of Software Validation; Final Guidance for Industry and FDA Staff}},
 	Year = {2002}}
 
-@misc{fda2,
-	Title = {{US FDA, Design Control Guidance For Medical Device Manufacturers}},
-	Year = {1997}}
-
-@misc{fda3,
-	Title = {{US FDA, Guidance for the Content of Premarket Submissions for Software Contained in Medical Devices}},
+@article{fda3,
+	Author = {US FDA},
+	Journal = {Center for Devices and Radiological Health},
+	Title = {{Guidance for the Content of Premarket Submissions for Software Contained in Medical Devices}},
 	Year = {2005}}
+
 
 @misc{fda4,
 	Title = {{US FDA, White Paper: Infusion Pump Improvement Initiative}},
@@ -276,8 +283,6 @@ year={2015}
 	Volume = {82},
 	Year = {1988}}
 
-@article{freedic,
-	Title = {{Medical dictionary: http://medical-dictionary .thefreedictionary .com}}}
 
 @article{ref_period,
 	Author = {P. Denes and D. Wu and R. Dhingra and R. J. Pietras and K. M Rosen},
@@ -357,21 +362,28 @@ year={2015}
 	Volume = {286},
 	Year = {2001}}
 
-@book{medstats2,
+@article{medstats2,
 	Author = {Center for Devices and Radiological Health},
 	Day = {18},
 	Month = {Jan},
+	Journal = {US FDA},
 	Title = {{Ensuring the Safety of Marketed Medical Devices: CDRH's Medical Device Postmarket Safety Program}},
 	Year = {2006}}
 
-@misc{recalls,
-	Title = {{List of Device Recalls, U.S. Food and Drug Admin., (last visited Jul. 19, 2010).}}}
+@inproceedings{autosar,
+  title={AUTOSAR--A Worldwide Standard is on the Road},
+  author={F{\"u}rst, Simon and M{\"o}ssinger, J{\"u}rgen and Bunzel, Stefan and Weber, Thomas and Kirschke-Biller, Frank and Heitk{\"a}mper, Peter and Kinkelin, Gerulf and Nishikawa, Kenji and Lange, Klaus},
+  booktitle={14th International VDI Congress Electronic Systems for Vehicles, Baden-Baden},
+  volume={62},
+  year={2009}
+}
 
-@misc{AUTOSAR,
-	Title = {{AUTOSAR website: http://www.autosar.org/}}}
-
-@misc{AVSI,
-	Title = {{AVSI website: http://www.avsi.aero}}}
+@article{avsi,
+  title={System architecture virtual integration: A case study},
+  author={Feiler, P and Wrage, L and Hansson, J},
+  journal={Embedded Real-time Software and Systems Conference},
+  year={2010}
+}
 
 @article{killedbycode,
 	Author = {K. Sandler and L. Ohrstrom and L. Moy and R. McVay},
@@ -404,9 +416,12 @@ year={2015}
 	Title = {{Testing Implantable Medical Devices}},
 	Year = {2003}}
 
-@misc{pauljones,
-	Title = {{Personal communication with Paul L. Jones, Senior Systems/Software Engineer, Office of Science and Engineering Laboratories, Center for Devices and Radiological Health, US FDA. August, 2010}}}
-
+@article{pauljones,
+	Author = {Paul L. Jones},
+	Journal = {Personal communication},
+	Title = {{Senior Systems/Software Engineer, Office of Science and Engineering Laboratories, US FDA}},
+	Year = {2010}}
+	
 @book{Vip,
 	Publisher = {Rivertek Medical Systems},
 	Title = {{Medtronic ViP-II Virtual Interactive Patient: User's Manual Software v1.5}},
@@ -580,20 +595,6 @@ year={2015}
 	Publisher = {Saunders},
 	Title = {{Cardiac Electrophysiology: From cell to bedside}},
 	Year = {2004}}
-
-@article{medstats1,
-	Author = {W. H. Maisel and M. O. Sweeney and W. G. Stevenson and K.E. Ellison and L. M. Epstein},
-	Journal = {J. American Med. Ass.},
-	Pages = {793-799},
-	Title = {Recalls and Safety Alerts Involving Pacemakers and Implantable Cardioverter-Defibrillator Generators},
-	Volume = {286},
-	Year = {2001}}
-
-@book{medstats2,
-	Author = {Center for Devices and Radiological Health},
-	Publisher = {US FDA},
-	Title = {{Ensuring the Safety of Marketed Medical Devices}},
-	Year = {2006}}
 
 @article{med-form1,
 	Author = {ten Teije, Annette and Marcos, Mar and Balser, Michel and van Croonenborg, Joyce and Duelli, Christoph and van Harmelen, Frank and Lucas, Peter and Miksch, Silvia and Reif, Wolfgang and Rosenbrand, Kitty and Seyfang, Andreas},
@@ -819,7 +820,7 @@ year={2015}
 	Year = {2000}}
 
 @misc{vhm_website,
-	Title = {{Virtual Heart Model website - http://mlab.seas.upenn.edu/vhm}}}
+	Title = {{Virtual Heart Model website - http://medcps.org}}}
 
 @book{timed-aut,
 	Author = {R. Alur},
