--- a/B.tex
+++ b/B.tex
@@ -1,6 +1,6 @@
 \chapter{Understanding and Modeling the Physiological Environment}
 
-Medical devices such as the implantable cardiac pacemaker and defibrillator are designed to operate autonomously and interact with the human body to maintain and improve the physiological condition of the patient. To evaluate the device within the closed-loop context of the human body, the knowledge of the physiological contexts (e.g. patient arrhythmias, physical activity) and the signals by which the device interacts with the organ(s) to manage the condition is essential. By constructing physiological models and encoding physiological requirements, our goal is to evaluate the safety and efficacy of the device therapy across a range of physiological conditions. Consequently, it is important to model the physiological environment of the device such that details unrelated to the interaction between the device and the human are abstracted away, while essential details required to differentiate different patient conditions are maintained. As we will see, to verify the device operation across a range of physiological conditions and for a set of safety and efficacy properties, we require a family of models which refine the closed-loop context to appropriately express the condition to be verified. In this chapter, we would therefore like to answer the following questions:
+Medical devices such as the implantable cardiac pacemaker and defibrillator are designed to operate autonomously and interact with the human body to maintain and improve the physiological condition of the patient. To evaluate the device within the closed-loop context of the human body, the knowledge of the physiological contexts (e.g. patient arrhythmias, physical activity) and the signals by which the device interacts with the organ(s) to manage the condition is essential. By constructing physiological models and encoding physiological requirements, our goal is to evaluate the safety and efficacy of the device therapy across a range of physiological conditions. Consequently, it is important to model the physiological environment of the device such that details unrelated to the interaction between the device and the human are abstracted away, while essential information required to differentiate different patient conditions are maintained. As we will see, to verify the device operation across a range of physiological conditions and for a set of safety and efficacy properties, we require a family of models which refine the closed-loop context to appropriately express the condition to be verified. In this chapter, we would therefore like to answer the following questions:
 
 \begin{itemize}
 \vspace{-5pt}
@@ -11,11 +11,11 @@ Medical devices such as the implantable cardiac pacemaker and defibrillator are 
 \item What are the different modeling philosophies when developing environment models for testing and for verification?
 \end{itemize}
 
-Models, especially environment models which span a large spectrum of complexity, should be designed in accordance with their respective applications. For understanding the underlying physiological principals, heart models with over 100,000 ordinary differential equations or 4 million finite elements have been developed~\cite{cell2bed}. While these models capture in high fidelity the physiological phenomena, they do not operate in real-time or provide the appropriate interfaces for device interaction. During model-based development of medical devices, the environment model should have a \emph{formal interface} for closed-loop model checking with of a model of the medical device and have a \emph{functional interface} for closed-loop testing of the actual medical device. Each application of the environment model has a different focus and has very distinct requirements for the models which influence the model complexity and model identifiability.
+Models, especially environment models which span a large spectrum of complexity, should be designed in accordance with their respective applications. For understanding the underlying physiological principals, heart models with over 100,000 ordinary differential equations or 4 million finite elements have been developed (\cite{cell2bed}). While these models capture in high fidelity the physiological phenomena, they do not operate in real-time or provide the appropriate interfaces for device interaction. During model-based development of medical devices, the environment model should have a \emph{formal interface} for closed-loop model checking with a model of the medical device. It must also have a \emph{functional interface} for closed-loop testing of the actual medical device. Each application of the environment model has a different focus and has distinct model requirements which influence the model complexity and model identifiability.
 
-\textbf{Model complexity} is generally measured in terms of the size of state space and computation complexity of state transitions, which affect the computation cost (memory and time) for closed-loop verification. Model complexity is largely influenced by the type of interactions with the device (e.g. analog signals, sensing, actuation) and the complexity of the environment conditions specified but the physiological requirements. 
+\textbf{Model complexity} is generally measured in terms of the size of state space and computation complexity of state transitions, which affect the computation cost (memory and time) for closed-loop verification. Model complexity is largely influenced by the type of interactions with the device (e.g. analog signals, sensing, actuation) and the environment conditions specified but the physiological requirements. 
 
-\textbf{Model Identifiability} is a metric of the feasibility of identifying model parameters from data. There are two methods for model construction: non-parametric modeling in which no prior knowledge is assumed and the model construction is purely data-driven, and parametric modeling in which prior knowledge of the physiological conditions is taken into account. For example, to model the electrophysiological activity of the heart, the appropriate data is generally scarce as it must capture the electrical potential across several hundred points within the heart along with annotation of the patient's physiological context. However, there is abundant literature describing the phenomena of individual arrhythmias which provide useful knowledge of the environment, it is more intuitive to begin with parametric modeling approaches.
+\textbf{Model Identifiability} is a metric for the feasibility of identifying model parameters from data. There are two methods for model construction: non-parametric modeling in which no prior knowledge is assumed and the model construction is purely data-driven, and parametric modeling in which prior knowledge of the physiological conditions is taken into account. For example, to model the electrophysiological activity of the heart, the appropriate data is generally scarce as it must capture the electrical potential across several hundred points within the heart along with annotation of the patient's physiological context. However, there is abundant literature describing the phenomena of individual arrhythmias which provide useful knowledge of the environment, it is more intuitive to begin with parametric modeling approaches.
 
 %%It affects the validity of the model which is a key element for closed-loop verification. Model identifiability is generally affected by the model complexity and the availability and quality of clinical data. 
 
@@ -34,7 +34,7 @@ In the following sections, we introduce the physiological contexts within which 
 \section{Heart Models for Pacemaker Interaction}
 The heart generates electrical impulses to maintain the heart rate appropriate for the physiological needs. These impulses conduct through the heart, triggering coordinated muscle contractions which pumps blood to the rest of the body. The underlying pattern and timing of these impulses determines the heart's rhythm and is key to proper heart function. Derangements in this rhythm are referred to as \emph{arrhythmia}, which impair the heart's ability to efficiently pump blood and compromise the patient's health. Arrhythmias are categorized into so-called \emph{Tachycardia} and \emph{Bradycardia}. Tachycardia features undesirable fast heart rate which results in inefficient blood pumping. Bradycardia features slow heart rate which results in insufficient blood supply. Bradycardia are due to failure of impulse generation with anomalies in the sinoatrial (SA) node, or failure of impulse propagation where the conduction from atria to the ventricles is delayed or blocked. 
 
-The electrical activities of the heart can be monitored and used to diagnose arrhythmia. The most well-known method is Electrocardiogram (ECG or EKG), which measure the integration of electrical activities of the heart measured along different axis on the body surface. The electrical activities can also be directly measured by inserting electrodes through the vein into the heart. The electrodes are placed against the inside heart wall and localized electrical activities can be measured. Physicians can also deliver pacing sequence through the electrodes to explore the heart conditions. This procedure is referred to as Electrophysiological (EP) Testing  (\cite{josephson}) and the signals are referred to as electrograms (EGMs) (\figref{probes}.b). The timing and morphology of the  ECG and EGM signals together are used to diagnose arrhythmia.
+The electrical activities of the heart can be monitored and used to diagnose arrhythmia. The most well-known method is Electrocardiogram (ECG or EKG), which measures the integration of electrical activities of the heart measured along different axis on the body surface. The electrical activities can also be directly measured by inserting electrodes through the vein into the heart. The electrodes are placed against the inside heart wall and localized electrical activities can be measured. Physicians can also deliver pacing sequence through the electrodes to explore the heart conditions. This procedure is referred to as Electrophysiological (EP) Testing  (\cite{josephson}) and the signals are referred to as electrograms (EGMs) (\figref{probes}.b). The timing and morphology of the  ECG and EGM signals together are used to diagnose arrhythmia.
 
 %Implantable pacemakers follow the principle of EP testing. For a dual chamber pacemaker, two leads are inserted into the right atrium and right ventricle, respectively. The pacemaker senses the intrinsic generation and conduction of the electrical signals in the two chambers and deliver electrical pacing when the heart rate and/or atria-to-ventricles conduction interval are abnormal.
 The implantable cardiac pacemakers are rhythm management devices designed to treat bradycardia. A typical dual chamber pacemaker has two leads inserted into the heart through the veins which can measure the local electrical activity of the right atrium and right ventricle respectively (\figref{probes}.a). According to the timing between sensed impulses, the pacemaker may deliver electrical pacing to the corresponding chamber to maintain proper heart rhythm.
@@ -165,7 +165,7 @@ After \emph{Tante} or \emph{Tretro} time expires, the path automaton sends out \
 The node and path automata are the basic building blocks for heart modeling. Hearts with different conditions are modeled by using appropriate timing parameters and/or different conduction topologies. We connect node and path automata with different timing parameters into a network to represent different heart conditions. (\figref{general_setup}) 
 
 \subsection{Interaction With The Heart Model}
-In EP testing and during pacemaker implantation, the local electrical activities, measured as electrogram (EGM) signals, are used to diagnose heart conditions. During heart model construction, we can assign a node automaton at electrode locations and the transitions to the ERP state can be used to represent the local activation events. In a more general setup where electrodes are assigned anywhere within the heart model, a probe model is designed to generate synthetic EGM signals using temporal information and spatial information from the network of node and path automata. \figref{egm_s} shows the morphology of EGM signal changes with different conduction velocity and probe configurations. Due to space limitation, detailed description of the probe model can be found in \cite{vhm_embc11}.
+In EP testing and during pacemaker implantation, the local electrical activities, measured as electrogram (EGM) signals, are used to diagnose heart conditions. During heart model construction, we can assign a node automaton at electrode locations and the transitions to the ERP state can be used to represent the local activation events. In a more general setup where electrodes are assigned anywhere within the heart model, a probe model is designed to generate synthetic EGM signals using temporal information and spatial information from the network of node and path automata. \figref{egm_s} shows the morphology of EGM signal changes with different conduction velocity and probe configurations. A detailed description of the probe model can be found in \cite{vhm_embc11}.
 
 \begin{figure}[!t]
 \center
