very small changes

--- a/B.tex
+++ b/B.tex
@@ -13,7 +13,7 @@ Medical devices such as the implantable cardiac pacemaker and defibrillator are 
 
 Models, especially environment models which span a large spectrum of complexity, should be designed in accordance with their respective applications. For understanding the underlying physiological principals, heart models with over 100,000 ordinary differential equations or 4 million finite elements have been developed~\cite{cell2bed}. While these models capture in high fidelity the physiological phenomena, they do not operate in real-time or provide the appropriate interfaces for device interaction. During model-based development of medical devices, the environment model should have a \emph{formal interface} for closed-loop model checking with of a model of the medical device and have a \emph{functional interface} for closed-loop testing of the actual medical device. Each application of the environment model has a different focus and has very distinct requirements for the models which influence the model complexity and model identifiability.
 
-\textbf{Model complexity} is generally measured in terms of the size of state space and computation complexity of state transitions, which affect the computation cost (memory and time) for closed-loop verification. Model complexity is largely influenced by the type of interactions with the device (e.g. analog signals, sensing, actuation) and the complexity of the environment conditions specified but the physiological requirements. 
+\textbf{Model complexity} is generally measured in terms of the size of state space and computation complexity of state transitions, which affect the computation cost (memory and time) for closed-loop verification. Model complexity is largely influenced by the type of interactions with the device (e.g. analog signals, sensing, actuation) and the complexity of the environment conditions specified by the physiological requirements. 
 
 \textbf{Model Identifiability} is a metric of the feasibility of identifying model parameters from data. There are two methods for model construction: non-parametric modeling in which no prior knowledge is assumed and the model construction is purely data-driven, and parametric modeling in which prior knowledge of the physiological conditions is taken into account. For example, to model the electrophysiological activity of the heart, the appropriate data is generally scarce as it must capture the electrical potential across several hundred points within the heart along with annotation of the patient's physiological context. However, there is abundant literature describing the phenomena of individual arrhythmias which provide useful knowledge of the environment, it is more intuitive to begin with parametric modeling approaches.
 
